src/generated/ourCParser.java
// Generated from C:/Users/Ondrej/IdeaProjects/FJP-C-to-PL0\ourC.g4 by ANTLR 4.9
package generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ourCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OP_MULTIPLICATION=1, OP_MINUS=2, OP_PLUS=3, OP_DIVISION=4, COMP_IDENT=5, 
		COMP_NOT_IDENT=6, COMP_GRTH=7, COMP_GRTH_EQ=8, COMP_LW=9, COMP_LW_EQ=10, 
		ASSIGN=11, NEGATION=12, QUES_MARK=13, OPER_AND=14, OPER_OR=15, COLON=16, 
		SEMI_COLON=17, BOOL_TRUE=18, BOOL_FALSE=19, LEFT_BASIC_BRACK=20, RIGHT_BASIC_BRACK=21, 
		LEFT_CURLY_BRACK=22, RIGHT_CURLY_BRACK=23, LEFT_NARROW_BRACK=24, RIGHT_NARROW_BRACK=25, 
		COMMA=26, END_OF_COM=27, CON_IF=28, CON_ELSE=29, CYC_WHILE=30, CYC_FOR=31, 
		CYC_FOREACH=32, CYC_REPEAT=33, CYC_UNTIL=34, CYC_DO=35, TO=36, BOOL=37, 
		INT=38, STRING=39, CONST=40, PROC_DEF=41, DEC_NUM=42, IDENT=43, STRING_DEC=44, 
		COMMENT_START=45, BLANK_SPACE=46;
	public static final int
		RULE_identifier_var = 0, RULE_bool_val = 1, RULE_dec_val = 2, RULE_string_val = 3, 
		RULE_sign_whole_num = 4, RULE_multi_assign = 5, RULE_expr_dec_bool = 6, 
		RULE_expr_string = 7, RULE_bool_var_dec = 8, RULE_decimal_var_dec = 9, 
		RULE_string_var_dec = 10, RULE_array_var_dec = 11, RULE_var_non_const_dec_command = 12, 
		RULE_var_const_dec_command = 13, RULE_var_declaration = 14, RULE_var_assignment = 15, 
		RULE_arr_assignment = 16, RULE_ternar_assignment = 17, RULE_call_proc = 18, 
		RULE_code_block = 19, RULE_block_body = 20, RULE_def_proc = 21, RULE_start = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"identifier_var", "bool_val", "dec_val", "string_val", "sign_whole_num", 
			"multi_assign", "expr_dec_bool", "expr_string", "bool_var_dec", "decimal_var_dec", 
			"string_var_dec", "array_var_dec", "var_non_const_dec_command", "var_const_dec_command", 
			"var_declaration", "var_assignment", "arr_assignment", "ternar_assignment", 
			"call_proc", "code_block", "block_body", "def_proc", "start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'*'", "'-'", "'+'", "'/'", "'=='", "'!='", "'>'", "'>='", "'<'", 
			"'<='", "'='", "'!'", "'?'", "'and'", "'or'", "':'", "';'", "'true'", 
			"'false'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "'\n'", "'if'", 
			"'else'", "'while'", "'for'", "'foreach'", "'repeat'", "'until'", "'do'", 
			"'to'", "'bool'", "'int'", "'string'", "'const'", "'procedure'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OP_MULTIPLICATION", "OP_MINUS", "OP_PLUS", "OP_DIVISION", "COMP_IDENT", 
			"COMP_NOT_IDENT", "COMP_GRTH", "COMP_GRTH_EQ", "COMP_LW", "COMP_LW_EQ", 
			"ASSIGN", "NEGATION", "QUES_MARK", "OPER_AND", "OPER_OR", "COLON", "SEMI_COLON", 
			"BOOL_TRUE", "BOOL_FALSE", "LEFT_BASIC_BRACK", "RIGHT_BASIC_BRACK", "LEFT_CURLY_BRACK", 
			"RIGHT_CURLY_BRACK", "LEFT_NARROW_BRACK", "RIGHT_NARROW_BRACK", "COMMA", 
			"END_OF_COM", "CON_IF", "CON_ELSE", "CYC_WHILE", "CYC_FOR", "CYC_FOREACH", 
			"CYC_REPEAT", "CYC_UNTIL", "CYC_DO", "TO", "BOOL", "INT", "STRING", "CONST", 
			"PROC_DEF", "DEC_NUM", "IDENT", "STRING_DEC", "COMMENT_START", "BLANK_SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ourC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ourCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Identifier_varContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ourCParser.IDENT, 0); }
		public Identifier_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).enterIdentifier_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).exitIdentifier_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ourCVisitor ) return ((ourCVisitor<? extends T>)visitor).visitIdentifier_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identifier_varContext identifier_var() throws RecognitionException {
		Identifier_varContext _localctx = new Identifier_varContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifier_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bool_valContext extends ParserRuleContext {
		public TerminalNode BOOL_TRUE() { return getToken(ourCParser.BOOL_TRUE, 0); }
		public TerminalNode BOOL_FALSE() { return getToken(ourCParser.BOOL_FALSE, 0); }
		public Bool_valContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).enterBool_val(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).exitBool_val(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ourCVisitor ) return ((ourCVisitor<? extends T>)visitor).visitBool_val(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bool_valContext bool_val() throws RecognitionException {
		Bool_valContext _localctx = new Bool_valContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bool_val);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_la = _input.LA(1);
			if ( !(_la==BOOL_TRUE || _la==BOOL_FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_valContext extends ParserRuleContext {
		public TerminalNode DEC_NUM() { return getToken(ourCParser.DEC_NUM, 0); }
		public Sign_whole_numContext sign_whole_num() {
			return getRuleContext(Sign_whole_numContext.class,0);
		}
		public Dec_valContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).enterDec_val(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).exitDec_val(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ourCVisitor ) return ((ourCVisitor<? extends T>)visitor).visitDec_val(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dec_valContext dec_val() throws RecognitionException {
		Dec_valContext _localctx = new Dec_valContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec_val);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_MINUS || _la==OP_PLUS) {
				{
				setState(50);
				sign_whole_num();
				}
			}

			setState(53);
			match(DEC_NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_valContext extends ParserRuleContext {
		public TerminalNode STRING_DEC() { return getToken(ourCParser.STRING_DEC, 0); }
		public String_valContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).enterString_val(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).exitString_val(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ourCVisitor ) return ((ourCVisitor<? extends T>)visitor).visitString_val(this);
			else return visitor.visitChildren(this);
		}
	}

	public final String_valContext string_val() throws RecognitionException {
		String_valContext _localctx = new String_valContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_string_val);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(STRING_DEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sign_whole_numContext extends ParserRuleContext {
		public TerminalNode OP_PLUS() { return getToken(ourCParser.OP_PLUS, 0); }
		public TerminalNode OP_MINUS() { return getToken(ourCParser.OP_MINUS, 0); }
		public Sign_whole_numContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sign_whole_num; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).enterSign_whole_num(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).exitSign_whole_num(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ourCVisitor ) return ((ourCVisitor<? extends T>)visitor).visitSign_whole_num(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sign_whole_numContext sign_whole_num() throws RecognitionException {
		Sign_whole_numContext _localctx = new Sign_whole_numContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sign_whole_num);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_la = _input.LA(1);
			if ( !(_la==OP_MINUS || _la==OP_PLUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multi_assignContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(ourCParser.ASSIGN, 0); }
		public Identifier_varContext identifier_var() {
			return getRuleContext(Identifier_varContext.class,0);
		}
		public Multi_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multi_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).enterMulti_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).exitMulti_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ourCVisitor ) return ((ourCVisitor<? extends T>)visitor).visitMulti_assign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multi_assignContext multi_assign() throws RecognitionException {
		Multi_assignContext _localctx = new Multi_assignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_multi_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(ASSIGN);
			setState(60);
			identifier_var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_dec_boolContext extends ParserRuleContext {
		public Token op;
		public Dec_valContext dec_val() {
			return getRuleContext(Dec_valContext.class,0);
		}
		public Bool_valContext bool_val() {
			return getRuleContext(Bool_valContext.class,0);
		}
		public Identifier_varContext identifier_var() {
			return getRuleContext(Identifier_varContext.class,0);
		}
		public TerminalNode LEFT_NARROW_BRACK() { return getToken(ourCParser.LEFT_NARROW_BRACK, 0); }
		public TerminalNode DEC_NUM() { return getToken(ourCParser.DEC_NUM, 0); }
		public TerminalNode RIGHT_NARROW_BRACK() { return getToken(ourCParser.RIGHT_NARROW_BRACK, 0); }
		public List<Expr_stringContext> expr_string() {
			return getRuleContexts(Expr_stringContext.class);
		}
		public Expr_stringContext expr_string(int i) {
			return getRuleContext(Expr_stringContext.class,i);
		}
		public TerminalNode COMP_IDENT() { return getToken(ourCParser.COMP_IDENT, 0); }
		public TerminalNode COMP_NOT_IDENT() { return getToken(ourCParser.COMP_NOT_IDENT, 0); }
		public List<Expr_dec_boolContext> expr_dec_bool() {
			return getRuleContexts(Expr_dec_boolContext.class);
		}
		public Expr_dec_boolContext expr_dec_bool(int i) {
			return getRuleContext(Expr_dec_boolContext.class,i);
		}
		public TerminalNode OPER_AND() { return getToken(ourCParser.OPER_AND, 0); }
		public TerminalNode OPER_OR() { return getToken(ourCParser.OPER_OR, 0); }
		public TerminalNode LEFT_BASIC_BRACK() { return getToken(ourCParser.LEFT_BASIC_BRACK, 0); }
		public TerminalNode RIGHT_BASIC_BRACK() { return getToken(ourCParser.RIGHT_BASIC_BRACK, 0); }
		public TerminalNode NEGATION() { return getToken(ourCParser.NEGATION, 0); }
		public TerminalNode OP_PLUS() { return getToken(ourCParser.OP_PLUS, 0); }
		public TerminalNode OP_MINUS() { return getToken(ourCParser.OP_MINUS, 0); }
		public TerminalNode OP_MULTIPLICATION() { return getToken(ourCParser.OP_MULTIPLICATION, 0); }
		public TerminalNode OP_DIVISION() { return getToken(ourCParser.OP_DIVISION, 0); }
		public TerminalNode COMP_LW() { return getToken(ourCParser.COMP_LW, 0); }
		public TerminalNode COMP_LW_EQ() { return getToken(ourCParser.COMP_LW_EQ, 0); }
		public TerminalNode COMP_GRTH() { return getToken(ourCParser.COMP_GRTH, 0); }
		public TerminalNode COMP_GRTH_EQ() { return getToken(ourCParser.COMP_GRTH_EQ, 0); }
		public Expr_dec_boolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_dec_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).enterExpr_dec_bool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ourCListener ) ((ourCListener)listener).exitExpr_dec_bool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ourCVisitor ) return ((ourCVisitor<? extends T>)visitor).visitExpr_dec_bool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expr_dec_boolContext expr_dec_bool() throws RecognitionException {
		return expr_dec_bool(0);
	}

	private Expr_dec_boolContext expr_dec_bool(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expr_dec_boolContext _localctx = new Expr_dec_boolContext(_ctx, _parentState);
		Expr_dec_boolContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expr_dec_bool, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(63);
				dec_val();
				}
				break;
			case 2:
				{
				setState(64);
				bool_val();
				}
				break;
			case 3:
				{
				setState(65);
				identifier_var();
				}
				break;
			case 4:
				{
				setState(66);
				identifier_var();
				setState(67);
				match(LEFT_NARROW_BRACK);
				setState(68);
				match(DEC_NUM);
				setState(69);
				match(RIGHT_NARROW_BRACK);
				}
				break;
			case 5:
				{
				setState(71);
				expr_string(0);
				setState(72);
				_la = _input.LA(1);
				if ( !(_la==COMP_IDENT || _la==COMP_NOT_IDENT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(73);
				expr_string(0);
				setState(76);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(74);
					_la = _input.LA(1);
					if ( !(_la==OPER_AND || _la==OPER_OR) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(75);
					expr_dec_bool(0);
					}
					break;
				}
				}
				break;
			case 6:
				{
				setState(78);
				match(LEFT_BASIC_BRACK);
				setState(79);
				expr_dec_bool(0);
				setState(80);
				match(RIGHT_BASIC_BRACK);
				}
				break;
			case 7:
				{
				setState(82);
				match(NEGATION);
				setState(83);
				expr_dec_bool(3);
				}
				break;
			case 8:
				{
				setState(84);
				match(OP_PLUS);
				setState(85);
				expr_dec_bool(2);
				}
				break;
			case 9:
				{
				setState(86);
				match(OP_MINUS);
				setState(87);
				expr_dec_bool(1);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(102);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new Expr_dec_boolContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr_dec_bool);
						setState(90);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(91);
						((Expr_dec_boolContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==OP_MULTIPLICATION || _la==OP_DIVISION) ) {
							((Expr_dec_boolContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(92);
						expr_dec_bool(10);
						}
						break;
					case 2:
						{
						_localctx = new Expr_dec_boolContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr_dec_bool);
						setState(93);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(94);
						((Expr_dec_boolContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==OP_MINUS || _la==OP_PLUS) ) {
							((Expr_dec_boolContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(95);
						expr_dec_bool(9);
						}
						break;
					case 3:
						{
						_localctx = new Expr_dec_boolContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr_dec_bool);
						setState(96);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(97);
						((Expr_dec_boolContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMP_IDENT) | (1L << COMP_NOT_IDENT) | (1L << COMP_GRTH) | (1L << COMP_GRTH_EQ) | (1L << COMP_LW) | (1L << COMP_LW_EQ))) != 0)) ) {
							((Expr_dec_boolContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(98);
						expr_dec_bool(8);
						}
						break;
					case 4:
						{
						_localctx = new Expr_dec_boolContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr_dec_bool);
						setState(99);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(100);
						((Expr_dec_boolContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==OPER_AND || _la==OPER_OR) ) {
							((Expr_dec_boolContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(101);
						expr_dec_bool(7);
						}
						break;
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
